# wordle

./: .gitignore  README.md  explore.ipynb  pyproject.toml
dbt_wordle/: .user.yml  dbt_project.yml  profiles.yml
dbt_wordle/models/marts/: mart_answer_history.sql  mart_letter_frequency.sql  mart_position_heatmap.sql  mart_top_predictions.sql  mart_word_scores.sql  schema.yml
dbt_wordle/models/staging/: schema.yml  stg_wordle_words.sql
dbt_wordle/seeds/: all_5_letter_words.csv
dbt_wordle/tests/: assert_no_duplicate_answers.sql
ingestion/: extract_wordle.py
orchestration/: pipeline.py
visualization/: dashboard.py
