[project]
name = "wordle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.4.4",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "streamlit>=1.55.0",
]
